--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7"
